--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,5 @@
-# This is a basic workflow to help you get started with Actions
+name: Build Extension and create release
 
-name: Create release
-
-# Controls when the workflow will run
 on:
   push:
     branches: [ "main" ]
@@ -34,8 +31,29 @@ jobs:
         run: 
           yarn install
 
-      # Runs a set of commands using the runners shell
       - name: 5. Webpack build 
-        run: |
+        run:
           yarn build
+
+      - name: 6. Read current version
+        id: version
+        uses: ashley-taylor/read-json-property-action@v1.0
+        with:
+          path: ./package.json
+          property: version
+
+      - name: 6. Zip the build
+        run:
+          zip -r Select-Picture-in-Picture-${{steps.version.outputs.value}}.zip ./extension/
+          
+      - name: Create release and upload release asset
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          body: TODO New Release.
+          draft: false
+          prerelease: false
+          files: |
+            Select-Picture-in-Picture-${{steps.version.outputs.value}}.zip
+            LICENSE 
       
